# spl-token-creator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/api/: dexscreener.rs  mod.rs  nft_storage.rs
src/api/dexscreener/: error.rs  tests.rs  types.rs
src/cli/: args.rs  config.rs  mod.rs  tests.rs
src/dex/: mod.rs  openbook.rs  raydium.rs
src/dex/raydium/: error.rs  layout.rs  pool.rs  swap.rs
src/spl/: mod.rs  tests.rs  token.rs
src/utils/: math.rs  mod.rs  websocket.rs
