[package]
name = "spl-token-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-program = "1.18"
solana-sdk = "1.18"
spl-token = "=4.0.0"
spl-associated-token-account = "=2.3.0"
solana-account-decoder = "1.18"
log = "0.4"
borsh = "1.3"
bytes = "1.5"
base64 = "0.22"
bs58 = "0.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
env_logger = "0.11"
chrono = "0.4"
tokio = "1.36"
futures = "0.3"
mpl-token-metadata = "4.1.2"
openbook_dex = "0.5.6"
config-file = { version = "0.2.3", features = ["yaml"] }
clap = { version = "4.5.2", features = ["derive"] }
thiserror = "1.0"
rand = "0.8.5"
bumpalo = { version = "3.15.4", features = ["collections"] }
reqwest = "0.11.26"
sha2 = "0.10.8"
tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5.0"
colored = "2"